# buildmyownlisp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: lispy.c  version.h.in
